--- a/example1/game1.html
+++ b/example1/game1.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인</title>
+    <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="/example1/exam1.css">
     <script src="/example1/exam1.js"></script>
 </head>
 <body>
-    <section>
+    <div class="section number-wrap">
         <h1>숫자 맞추기</h1>
         <div class="btn-wrap">
             <button onclick="javascript:startGame();">게임시작</button>
@@ -17,6 +18,6 @@
         </div>
         
         <div id="result"></div>
-    </section>
+    </div>
 </body>
 </html>
