--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="common.css">
 </head>
 <body>
-    <div class="article">
+    <div class="section">
         <h1>mini project</h1>
         <ul>
             <li><a href="/example1/game1.html">숫자 맞추기 게임</a></li>
