--- a/example2/exam2.html
+++ b/example2/exam2.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>example2</title>
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="../common.css">
 </head>
 <body>
     <div class="section">
         <h1>예제2</h1>
+    </div>
+    <div class="footer">
+        <button onclick="location.href='../index.html'">목록보기</button>
     </div>
 </body>
 </html>
