--- a/example1/game1.html
+++ b/example1/game1.html
@@ -14,10 +14,12 @@
         <h1>숫자 맞추기</h1>
         <div class="btn-wrap">
             <button onclick="javascript:startGame();">게임시작</button>
-            <button onclick="location.href='../index.html'">목록보기</button>
         </div>
         
         <div id="result"></div>
+        <div class="footer">
+            <button onclick="location.href='../index.html'">목록보기</button>
+        </div>
     </div>
 </body>
 </html>
