--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="/example1/game1.html">숫자 맞추기 게임</a></li>
             <li><a href="/example2/exam2.html">스크립트 예제</a></li>
             <li><a href="/example3/exam3.html">계산기</a></li>
+            <li><a href="/exampleLocalStorage/exam4.html">메모장(localStorage)</a></li>
         </ul>
     </div>
 </body>
