--- a/example1/game1.html
+++ b/example1/game1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인</title>
     <link rel="stylesheet" href="../common.css">
-    <link rel="stylesheet" href="/example1/exam1.css">
-    <script src="/example1/exam1.js"></script>
+    <link rel="stylesheet" href="../example1/exam1.css">
+    <script src="../example1/exam1.js"></script>
 </head>
 <body>
     <div class="section number-wrap">
