--- a/example3/exam3.html
+++ b/example3/exam3.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>계산기</title>
     <link rel="stylesheet" href="../common.css">
-    <link rel="stylesheet" href="/example3/exam3.css">
+    <link rel="stylesheet" href="../example3/exam3.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/example3/exam3.js"></script>
+    <script src="../example3/exam3.js"></script>
 </head>
 <body>
     <div class="section">
